fix: heading+subheading spacing

--- a/sass/v1/_article.scss
+++ b/sass/v1/_article.scss
@@ -4,6 +4,11 @@ article.v1 {
 
 	> :first-child {
 		margin-block-start: $site-padding * 3 !important;
+
+		&:has(+h1+h1) {
+			/* If header with =subheading. */
+			margin-block-start: 0 !important;
+		}
 	}
 
 	img {
